--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,33 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+a{
+    text-decoration: none;
+    color: black;
+}
+
+.contact{
+    padding: 5px;
+    border: 1px solid rgb(144, 144, 144);
+    border-radius: 5px;
+    margin-bottom: 5px;
+    background-color: rgb(75, 75, 161);
+    color:white
+}
+
+.contact:hover{
+    background-color: rgb(30, 30, 63);
+    
+}
+
+.user_received{
+    background-color: green;
+    
+}
+
+.user_send{
+    background-color: rgb(161, 161, 204);
+
+}
