--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -31,3 +31,13 @@ a{
     background-color: rgb(161, 161, 204);
 
 }
+
+.navbar{
+    list-style-type: none;
+}
+
+.navbar > li{
+    display: inline-block;
+    padding: 5px;
+    margin: 10px;
+}
