--- a/resources/css/chat.css
+++ b/resources/css/chat.css
@@ -59,8 +59,7 @@ h1{
     display: flex;
     flex-direction: column;
     gap: 20px;
-    margin-bottom: 100px;
-    margin: 0 3%;
+    margin: 0 3% 50%;
 
 }
 .message-item{
@@ -75,7 +74,7 @@ h1{
 }
 
 .user_send{
-    background-color:  rgb(42, 207, 196);
+    background-color:  #78dad3;
     color: white;
     align-self: end;
 }
@@ -91,6 +90,7 @@ h1{
     position: relative;
     display: block;
     text-align: end;
+    width: 100px;
 }
 
 .time-user-current{
@@ -99,4 +99,48 @@ h1{
     position: relative;
     display: block;
     text-align: end;
+}
+
+.icon-message{
+    margin-left: 7px;
+}
+
+.icon-message-bar{
+    background-color: inherit;
+    width: 1.8px;
+    border-radius: 5px;
+    position: relative;
+    display: inline-block ;
+}
+.icon-message-bar-one{
+    height: 7px;
+    transform: rotate(0.39turn);
+}
+
+.icon-message-bar-two{
+    height: 13px;
+    transform: rotate(45deg);
+    left: 4.8px;
+    top: 1px;
+
+}
+
+.icon-message-bar-tree{
+    height: 13px;
+    top: 1px;
+    transform: rotate(45deg);
+    left: 7px;
+}
+
+.icon-error{
+    background-color: red;
+}
+.icon-pending{
+    background-color: rgb(142, 142, 142);
+}
+.icon-success{
+    background-color: rgb(27, 176, 230);
+}
+.icon-viewed{
+    background-color:  rgb(27, 176, 230);
 }
