--- a/resources/css/chat.css
+++ b/resources/css/chat.css
@@ -4,12 +4,19 @@ h1{
     padding: 5px;
     text-align: center;
     color: white;
+    min-width: 100vw;
 }
 
 #user_received{
     padding: 5px 10px;
     box-shadow: -1px 2px 16px 0px #44373736;
     margin-bottom: 20px;
+    position: fixed;
+}
+
+#message-elements{
+    position: fixed;
+    z-index: 5;
 }
 
 #status{
