--- a/resources/css/chat.css
+++ b/resources/css/chat.css
@@ -12,11 +12,15 @@ h1{
     box-shadow: -1px 2px 16px 0px #44373736;
     margin-bottom: 20px;
     position: fixed;
+    width: 100vw;
+    background-color: white;
+
 }
 
 #message-elements{
     position: fixed;
     z-index: 5;
+    top: 0px
 }
 
 #status{
@@ -66,7 +70,7 @@ h1{
     display: flex;
     flex-direction: column;
     gap: 20px;
-    margin: 0 3% 50%;
+    margin: 110px 3% 50%;
 
 }
 .message-item{
@@ -77,7 +81,8 @@ h1{
 .user_received{
     background-color: rgb(231, 234, 231);
     align-self: start;
-   
+    padding: 15Fpx;
+    position: relative;
 }
 
 .user_send{
@@ -92,15 +97,6 @@ h1{
 }
 
 .time{
-    color: rgb(157, 156, 156);
-    font-size: 0.8em;
-    position: relative;
-    display: block;
-    text-align: end;
-    width: 100px;
-}
-
-.time-user-current{
     color: rgba(118, 115, 115, 0.897);
     font-size: 0.8em;
     position: relative;
@@ -150,4 +146,9 @@ h1{
 }
 .icon-viewed{
     background-color:  rgb(27, 176, 230);
+}
+.icon-message-bar-one.icon-error{
+    height: 13px;
+    top: 1px;
+    left: 7px;
 }
