--- a/resources/css/chat.css
+++ b/resources/css/chat.css
@@ -152,3 +152,65 @@ h1{
     top: 1px;
     left: 7px;
 }
+
+/* list contact */
+#contacts{
+    margin: 25px 40px;
+}
+.contact{
+    border-bottom: 2px solid rgb(144 144 144 / 8%);
+    color: black;
+    padding: 15px 10px;
+    display: flex;
+    gap: 40px;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+.contact a{
+display: flex;
+align-items: center;
+gap: 10px;
+}
+
+.icon-contact{
+    min-height: 40px;
+    min-width: 40px;
+    border-radius: 20px;
+    background-color: rgb(125, 124, 124);
+}
+.division-line{
+    background-color: black;
+    width: 80vw;
+    margin: auto;
+}
+
+.icon-contact > .icon-status{
+    background: red;
+    position: relative;
+    top: 19px;
+    left: 31px;
+    height: 11px;
+    width: 11px;
+}
+
+.last-message{
+    flex:2
+}
+
+.light-gray-color{
+    color: rgb(170, 169, 169);
+}
+
+.list-item-time-top{
+    font-size: 0.8em;
+    position: relative;
+    bottom: 50px;;
+}
+
+/* responsive */
+@media (max-width: 768px){
+    .contact a{
+        flex-direction: column;
+    }
+}
